--- a/style.css
+++ b/style.css
@@ -20,21 +20,29 @@ body {
 }
 .content{
     background-color: rgba(0, 0, 0,0.5);
-    width: 400px;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .content h1{
     color: white;
     font-size: 3rem;
     text-align: center;
 }
-.content input{
+.search input{
     width: 70%;
     height: 30px;
 }
-.content button{
+.search button{
     width: 20%;
     height: 30px;
 }
 .search{
+    margin-top: 30px;
     padding-left: 20px;
+    display: flex;
+    align-items: center;
+    width: 400px;
 }
